Add RNAException class which is thrown from DAO and caught in the JSON servlet.  Do not let clients of edition know that its keys are strings.  Create a Response class for client-server interaction, which contains a status code, payload, and message